2010-06-15  Martin Jambor  <mjambor@suse.cz>

PR lto/44464
	* tree-sra.c (replace_removed_params_ssa_names): Call release_ssa_name
	on the newly dead SSA name.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@160777 138bc75d-0d04-0410-961f-82ee72b054a4